--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,7 +4,7 @@ before:
   hooks:
     - go mod download
 builds:
-  - main: ./cmd/owl/main.go
+  - main: ./cmd/owl
     goos:
       - darwin
       - linux
